# AI-digest

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/digest/: __init__.py  analyzer.py  cli.py  config.py  models.py
src/digest/collectors/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  gemini_cli.py  opencode.py
tests/: test_analyzer.py  test_collectors_overlap.py  test_config.py  test_opencode_collector.py
