[project]
name = "digest"
version = "0.1.0"
description = "AI Agent Data Collector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.9.2", "rich>=13.9.4"]

[project.scripts]
digest = "digest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digest"]
